--- a/configs/configs.yaml
+++ b/configs/configs.yaml
@@ -22,3 +22,8 @@ graphdb:
 grpc:
   host: 0.0.0.0
   port: 50051
+kafka:
+  host: 0.0.0.0
+  port: 9092
+  groupId: group_logger
+  topic: log_topic
